Tue Dec 15 12:36:52 1998  Adam Fedor  <fedor@ultra.doc.com>

	* target.make (BUNDLE_LD): Change to $(CC).
	(SHARED_LIB_LINK_CMD): Set shared name using major version num.
	* library.make (VERSION_MAJOR_LIBRARY_FILE): name using major
	version number.

	* configure.in (ac_cv_objc_threaded): Put the result of
 	objc_threaded conftest in config.cache file (patch from Matthias
 	Klose <doko@cs.tu-berlin.de>).

Mon Dec  7 09:58:01 1998  Adam Fedor  <fedor@ultra.doc.com>

	* target.make: Add FreeBSD target for shared libs.
	* config.make.in (EXEEXT): Set from program_suffix.
	* openapp.in (EXEEXT): Likewise.
 	* debugapp.in (EXEEXT): Likewise.

	* aggregate.make (internal-all): Break if subproject make fails.

Mon Dec  7 16:10:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* service.make: Applied patch supplied by <doko@cs.tu-berlin.de> to
	find make_services if it hasn't been installed.

Mon Dec  7  6:45:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* openapp.in: Removed dependency on xargs - don't see how it could
	have caused the recent problems reported of openapp silently failing
	but it's a possibility.

Wed Nov 25 16:25:09 1998  Adam Fedor  <fedor@doc.com>

	* configure.in (ac_cv_library_combo): Take old value if not set.

Mon Nov 23 14:00:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	GNUmakefile.in: mod for services
	services.make: new build target for services bundle.
	application.make: Improved generation of Info-gnustep.plist
	bundle.make: Improved generation of Info-gnustep.plist

1998-11-19 14:20  Lyndon Tremblay  <tremblay2@home.com>

	* GNUmakefile.in: Added model (un)installation (SavePanel.gmodel), 
	                  model files install in GNUSTEP_ROOT/Library/Model/
	* SavePanel.gmodel: More GUI elements, nearing completion

Wed Nov 18 17:20:02 1998  Adam Fedor  <fedor@hyper.doc.com>

	* brain.make (SYSTEM_LIBS): Remove dps libs from xraw compilation.
