@@ -1,5 +1,9 @@
 Tue Dec 15 12:36:52 1998  Adam Fedor  <fedor@ultra.doc.com>
 
+	* GNUmakefile.in: Add $(EXEEXT) to which_lib
+	* objc.make (INTERNAL_objcprogram_NAME): Add $(EXEXT) to executable.
+	* tool.make (INTERNAL_tool_NAME): Likewise.
+	
 	* target.make (BUNDLE_LD): Change to $(CC).
 	(SHARED_LIB_LINK_CMD): Set shared name using major version num.
 	* library.make (VERSION_MAJOR_LIBRARY_FILE): name using major
@@ -15,6 +19,7 @@ Mon Dec  7 09:58:01 1998  Adam Fedor  <fedor@ultra.doc.com>
 	* config.make.in (EXEEXT): Set from program_suffix.
 	* openapp.in (EXEEXT): Likewise.
  	* debugapp.in (EXEEXT): Likewise.
+	* application.make (APP_FILE): Add $(EXEEXT).
 
 	* aggregate.make (internal-all): Break if subproject make fails.
 
